--- a/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/qca6390_defconfig
@@ -112,6 +112,7 @@ ifneq ($(CONFIG_MOBILE_ROUTER), y)
 CONFIG_QCOM_TDLS := y
 
 CONFIG_WLAN_SYSFS := y
+CONFIG_WLAN_POWER_DEBUG := y
 endif
 
 CONFIG_QCACLD_FEATURE_GREEN_AP := y
@@ -637,7 +638,7 @@ CONFIG_FEATURE_WLAN_LPHB := y
 CONFIG_QCA_SUPPORT_TX_THROTTLE := y
 CONFIG_WMI_INTERFACE_EVENT_LOGGING := y
 CONFIG_WLAN_FEATURE_LINK_LAYER_STATS := y
-CONFIG_WLAN_FEATURE_MIB_STATS := y
+CONFIG_WLAN_FEATURE_MIB_STATS := n
 CONFIG_FEATURE_WLAN_EXTSCAN := n
 CONFIG_WMI_BCN_OFFLOAD := y
 CONFIG_160MHZ_SUPPORT := y
