--- a/arch/arm64/configs/nethunter_defconfig
+++ b/arch/arm64/configs/nethunter_defconfig
@@ -19,7 +19,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-NetHunter-Beta2"
+CONFIG_LOCALVERSION="-NetHunter"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_DEFAULT_HOSTNAME="kali"
